syntax = "proto3";

option java_package = "com.scto.codelikebastimove.core.datastore.proto";
option java_multiple_files = true;

enum ThemeMode {
    THEME_MODE_UNSPECIFIED = 0;
    THEME_MODE_LIGHT = 1;
    THEME_MODE_DARK = 2;
    THEME_MODE_FOLLOW_SYSTEM = 3;
}

enum OpenJdkVersion {
    OPENJDK_VERSION_UNSPECIFIED = 0;
    OPENJDK_17 = 1;
    OPENJDK_22 = 2;
}

enum BuildToolsVersion {
    BUILD_TOOLS_VERSION_UNSPECIFIED = 0;
    BUILD_TOOLS_35_0_1 = 1;
    BUILD_TOOLS_34_0_2 = 2;
    BUILD_TOOLS_33_0_1 = 3;
}

enum ProjectTemplateType {
    PROJECT_TEMPLATE_UNSPECIFIED = 0;
    PROJECT_TEMPLATE_EMPTY_ACTIVITY = 1;
    PROJECT_TEMPLATE_EMPTY_COMPOSE = 2;
    PROJECT_TEMPLATE_BOTTOM_NAVIGATION = 3;
    PROJECT_TEMPLATE_NAVIGATION_DRAWER = 4;
    PROJECT_TEMPLATE_TABBED = 5;
    PROJECT_TEMPLATE_MULTI_MODULE = 6;
    PROJECT_TEMPLATE_MVVM_CLEAN = 7;
    PROJECT_TEMPLATE_WEAR_OS = 8;
    PROJECT_TEMPLATE_RESPONSIVE_FOLDABLE = 9;
}

message VersionCatalogEntryProto {
    string name = 1;
    string version = 2;
}

message VersionCatalogLibraryProto {
    string alias = 1;
    string group = 2;
    string name = 3;
    string version_ref = 4;
}

message VersionCatalogPluginProto {
    string alias = 1;
    string id = 2;
    string version_ref = 3;
}

message VersionCatalogBundleProto {
    string alias = 1;
    repeated string libraries = 2;
}

message VersionCatalogProto {
    repeated VersionCatalogEntryProto versions = 1;
    repeated VersionCatalogLibraryProto libraries = 2;
    repeated VersionCatalogPluginProto plugins = 3;
    repeated VersionCatalogBundleProto bundles = 4;
}

message GradleInfoProto {
    string gradle_version = 1;
    string distribution_url = 2;
    string agp_version = 3;
    string kotlin_version = 4;
    string compose_bom_version = 5;
    bool uses_version_catalog = 6;
}

message TemplateInfoProto {
    string id = 1;
    string name = 2;
    string description = 3;
    string version = 4;
    int64 last_updated = 5;
    ProjectTemplateType template_type = 6;
    GradleInfoProto gradle_info = 7;
    VersionCatalogProto version_catalog = 8;
    repeated string supported_languages = 9;
    repeated string features = 10;
    int32 min_sdk = 11;
    int32 target_sdk = 12;
    int32 compile_sdk = 13;
}

message TemplateRegistryProto {
    int32 total_template_count = 1;
    int64 registry_last_updated = 2;
    string registry_version = 3;
    repeated TemplateInfoProto templates = 4;
}

message GitConfigProto {
    string user_name = 1;
    string user_email = 2;
}

message ClonedRepositoryProto {
    string path = 1;
    string url = 2;
    string branch = 3;
    int64 cloned_at = 4;
}

message ProjectProto {
    string name = 1;
    string path = 2;
    string package_name = 3;
    ProjectTemplateType template_type = 4;
    int64 created_at = 5;
    int64 last_opened_at = 6;
}

message OnboardingConfigProto {
    bool onboarding_completed = 1;
    bool file_access_permission_granted = 2;
    bool usage_analytics_permission_granted = 3;
    bool battery_optimization_disabled = 4;
    OpenJdkVersion selected_openjdk_version = 5;
    BuildToolsVersion selected_build_tools_version = 6;
    bool git_enabled = 7;
    bool git_lfs_enabled = 8;
    bool ssh_enabled = 9;
    bool installation_started = 10;
    bool installation_completed = 11;
}

message EditorSettingsProto {
    float font_size = 1;
    string font_family = 2;
    int32 tab_size = 3;
    bool use_soft_tabs = 4;
    bool show_line_numbers = 5;
    bool word_wrap = 6;
    bool highlight_current_line = 7;
    bool auto_indent = 8;
    bool show_whitespace = 9;
    bool bracket_matching = 10;
    bool auto_close_brackets = 11;
    bool auto_close_quotes = 12;
    string editor_theme = 13;
    bool minimap_enabled = 14;
    bool sticky_scroll = 15;
    int32 cursor_blink_rate = 16;
    bool smooth_scrolling = 17;
}

message UserPreferencesProto {
    ThemeMode theme_mode = 1;
    bool dynamic_colors_enabled = 2;
    GitConfigProto git_config = 3;
    repeated ClonedRepositoryProto cloned_repositories = 4;
    OnboardingConfigProto onboarding_config = 5;
    string root_directory = 6;
    repeated ProjectProto projects = 7;
    string current_project_path = 8;
    bool logging_enabled = 9;
    bool logging_initialized = 10;
    TemplateRegistryProto template_registry = 11;
    EditorSettingsProto editor_settings = 12;
    bool parallel_build_enabled = 13;
    bool clean_before_build_enabled = 14;
    bool offline_mode_enabled = 15;
    bool auto_run_enabled = 16;
    int64 update_check_interval_hours = 17;
}